# mrpoid2022

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: changelog.html  faq.html
app/src/main/java/com/mrpoid/app/: BaseActivity.java  EmulatorActivity.java  EmulatorService.java  MrpoidSettingsActivity.java
app/src/main/java/com/mrpoid/apps/: AppActivity0.java  AppService0.java
app/src/main/java/com/mrpoid/apps/procmgr/: AppProcess.java  AppProcessManager.java  AppProcessService.java  IMessageCodes.java
app/src/main/java/com/mrpoid/core/: EmuScreen.java  Emulator.java
app/src/main/java/com/mrpoid/game/keypad/: DPad.java  DefKeyLayouter.java  Keypad.java  KeypadEditActivity.java  TextButton.java
app/src/main/java/com/mrpoid/game/keysprite/: ChooserFragment.java  KeySpriteEditorActivity.java
app/src/main/java/com/mrpoid/mrplist/app/: BaseActivity.java  BrowserActivity.java  FileManagerActivity.java  HomeActivity.java  MyApplication.java  StoreActivity.java  WelcomeActivity.java
app/src/main/java/com/mrpoid/mrplist/app/ui/main/: PageViewModel.java  PlaceholderFragment.java  SectionsPagerAdapter.java
app/src/main/java/com/mrpoid/mrplist/moduls/: Common.java  FileListLoader.java  FileType.java  MpFile.java  MpListAdapter.java  MrpFile.java  MrpInfo.java  MyFavoriteManager.java  PreferencesProvider.java
app/src/main/java/com/mrpoid/mrplist/utils/: MrpUtils.java  ShortcutUtils.java  Test.java
app/src/main/java/com/mrpoid/mrplist/view/: BaseFileFragment.java  BaseMrpListFragment.java  BrowserFragment.java  DownloadedFragment.java  ExplorerFragment.java  LocalmrpFragment.java  MyFavoriteFragment.java  MyListFragment.java  SlidingTabLayout.java  SlidingTabStrip.java
app/src/main/java/com/mrpoid/view/: ListViewPathAdapter.java  PathChooseDialog.java
app/src/main/jni/: Android.mk  CMakeLists.txt
app/src/main/jni/src/: Android2.mk  emulator.c  mr_plat.h  network.c  register_natives.c  vm.h
app/src/main/jni/src/lib/: msgqueue.c
app/src/main/jni/src/mr/: mr_gb2312.h
app/src/main/jni/src/mr/src/: mr_state.c
app/src/main/jni/src/mythroad/: mr_smscfg.c  mr_smscfg.h
app/src/main/jni/test/: CMakeLists.txt  log.h  test.c
app/src/main/res/layout/: activity_home.xml  activity_store.xml  activity_welcome.xml  dialog_filehandle.xml  dialog_markedit.xml  dialog_mrpinfo.xml  drawer_list_item.xml  file_browser.xml  file_list_item.xml  fragment_browser.xml  fragment_store.xml  list_item.xml  navigation_list_header.xml  navigation_toolbar.xml
app/src/main/res/values/: aboutt.xml  colors.xml  dimens.xml  emu_strings.xml  strings.xml  styles1.xml
app/src/main/res/values-en/: aboutt.xml  emu_strings.xml
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle
lib/src/main/: AndroidManifest.xml
lib/src/main/java/com/edroid/common/base64/: Base64InputStream.java
lib/src/main/java/com/edroid/common/dl/: DownloadListener.java  DownloadManager.java  Downloader.java  IDownloadListener.java
lib/src/main/java/com/edroid/common/utils/: PhoneUtils.java  TimeUtils.java  WorkThread.java
lib/src/main/java/com/mrpoid/: MrpoidMain.java
lib/src/main/java/com/mrpoid/app/: BaseActivity.java  EmulatorActivity.java  EmulatorApplication.java  EmulatorReceiver.java  EmulatorService.java  ExternActivity.java  MrpoidSettingsActivity.java
lib/src/main/java/com/mrpoid/apps/procmgr/: AppProcess.java  AppProcessManager.java
lib/src/main/java/com/mrpoid/core/: BitmapPool.java  EmuAudio.java  EmuConfig.java  EmuLog.java  EmuScreen.java  EmuSmsManager.java  EmuUtils.java  EmuView.java  Emulator.java  MrDefines.java  MrpoidSettings.java
lib/src/main/java/com/mrpoid/game/engine/: Actor.java  ActorGroup.java  Director.java
lib/src/main/java/com/mrpoid/game/keypad/: DefKeyLayout.java  FloatMenuButton.java  Keypad.java  KeypadEditActivity.java  KeypadView.java
lib/src/main/java/com/mrpoid/game/keysprite/: ChooserFragment.java  KeyEventListener.java  KeySprite.java  KeySpriteEditorActivity.java  OnChooseLitener.java  SampleKeySprite.java  Sprite.java
lib/src/main/java/com/mrpoid/view/: ListViewPathAdapter.java  PathChooseDialog.java  PathPreference.java
lib/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt
lib/src/main/jni/src/: Android.mk  CMakeLists.txt  CMakeLists2.txt  cport.c  dsm.c  dsm.h  emulator.c  emulator.h  encode.c  mr_plat.h  msgqueue.c  network.c  tables.h  utils.c  utils.h  vm.c
lib/src/main/jni/src/lib/: ArrayList.c  JniUtils.c
lib/src/main/jni/src/mr/: CMakeLists.txt  mr_gb2312.c  mrporting.h  mythroad.c  mythroad_mini.c
lib/src/main/jni/src/mr/include/: mr_auxlib.h
lib/src/main/jni/src/mr/src/lib/: mr_auxlib.c
lib/src/main/jni/src/mr_pre/include/: mrporting.h
lib/src/main/jni/src/mythroad/: mrporting.h  mythroad.c  mythroad.h
lib/src/main/res/layout/: activity_emulator_drawer.xml
lib/src/main/res/values/: emu_strings.xml
